--- a/package.json
+++ b/package.json
@@ -4,12 +4,40 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nrwl/cypress": "15.8.5",
+    "@nrwl/eslint-plugin-nx": "15.8.5",
     "@nrwl/js": "15.8.5",
+    "@nrwl/linter": "15.8.5",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/vite": "^15.8.5",
+    "@nrwl/web": "^15.8.5",
     "@nrwl/workspace": "15.8.5",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "@vitest/coverage-c8": "~0.25.8",
+    "@vitest/ui": "^0.25.8",
+    "cypress": "^12.2.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jsdom": "~20.0.3",
     "nx": "15.8.5",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "typescript": "~4.9.5",
+    "vite": "^4.0.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
+  },
+  "dependencies": {
+    "@effect/data": "^0.3.3",
+    "@effect/io": "^0.7.0",
+    "@effect/stream": "^0.7.0",
+    "core-js": "^3.6.5",
+    "graphics-ts": "link:../graphics-ts/dist",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.3.0"
   }
 }
