--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^2.6.2",
     "typescript": "~4.9.5",
     "vite": "^4.0.1",
+    "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.25.8"
