--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@effect/stream": "^0.7.0",
     "core-js": "^3.6.5",
     "graphics-ts": "link:../graphics-ts/dist",
+    "lit": "^2.6.1",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   }
