--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "rootDir": ".",
+    "useDefineForClassFields": false,
+    "strict": true,
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
